[package]
name = "media-player-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hidapi = "2.3.3"
rocket = "=0.5.0-rc.3"
rand = "0.8.5"
reqwest = "0.11"
base64 = "0.21.2"
serde_json = "1.0.99"
serde = "1.0.164"
event-emitter-rs = "0.1.4"
tokio = "1.29.1"

[dependencies.redis]
version = "*"